# pipeline-genai

./: .gitignore  README.md  app.py  contract.py  database.py  dbt_project.yml  get_json.py  gold_vendas_por_produto.json  groq_test.py  mkdocs.yml  pyproject.toml
docs/: index.md
sales_dw/models/bronze/: bronze_sales.sql  schema.yml
sales_dw/models/gold/: gold_sales.sql
sales_dw/models/silver/: silver_sales.sql
